syntax = "proto3";

package api.alarm.hook;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/aide-family/moon/api/alarm/hook;hook";
option java_multiple_files = true;
option java_package = "api.alarm.hook";

// 接收prometheus报警hook请求
service Hook {
	// 接收prometheus报警hook请求
	rpc V1(HookV1Request) returns (HookV1Reply) {
		option (google.api.http) = {
			post: "/api/v1/alert/hook"
			body: "*"
		};
	}
}

// prometheus webhook 报警数据
message HookV1Request {
	// 接收者
	string receiver = 1;
	// 报警状态, firing, resolved
	string status = 2 [(validate.rules).string = {
		in: ["firing", "resolved"]
	}];
	// 告警列表
	repeated AlertV1 alerts = 3 [(validate.rules).repeated.min_items = 1];
	// 告警组标签
	map<string,string> groupLabels = 4;
	// 公共标签
	map<string,string> commonLabels = 5;
	// 公共注解
	map<string,string> commonAnnotations = 6;
	// 外部链接
	string externalURL = 7;
	// 版本
	string version = 8;
	// 告警组key
	string groupKey = 9;
	// 截断告警数
	int32 truncatedAlerts = 10;
}

// 告警明细
message AlertV1 {
	// 告警状态, firing, resolved
	string status = 1 [(validate.rules).string = {
		in: ["firing", "resolved"]
	}];
	// 标签
	map<string,string> labels = 2;
	// 注解
	map<string,string> annotations = 3;
	// 开始时间
	string startsAt = 4;
	// 结束时间, 空表示未结束
	string endsAt = 5;
	// 告警生成链接
	string generatorURL = 6;
	// 指纹
	string fingerprint = 7 [(validate.rules).string.min_len = 1];
}

// 接收prometheus报警hook请求返回
message HookV1Reply {
	// 响应消息
	string msg = 1;
	// 响应码
	int32 code = 2;
}